--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,8 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next -p 7777 -H 192.168.1.43",
+    "dev-public": "next -p 7777 -H 192.168.1.43",
+    "dev": "next -p 7777",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
