--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^4.1.11",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
     "apollo-boost": "^0.1.28",
     "apollo-client": "^2.5.1",
@@ -22,6 +23,7 @@
     "graphql-tag": "^2.10.1",
     "js-cookie": "^2.2.0",
     "next": "^8.0.3",
+    "next-images": "^1.1.0",
     "next-with-apollo": "^3.3.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -30,6 +32,7 @@
     "react-apollo": "^2.5.1",
     "react-dom": "^16.8.3",
     "react-modal": "^3.8.1",
+    "react-toastify": "^4.5.2",
     "react-transition-group": "^2.6.0",
     "styled-components": "^4.1.3"
   },
