--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.3"
-  }
+  },
+  "dependencies": {}
 }
