--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
+    "dev-sapco": "next -p 7777 -H 192.168.1.43",
     "dev-public": "next -p 7777 -H 192.168.1.62",
     "dev": "next -p 7777",
     "build": "next build",
