--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "apollo-boost": "^0.1.28",
     "apollo-client": "^2.5.1",
     "cookie": "^0.3.1",
+    "date-fns": "^2.0.0-alpha.27",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "js-cookie": "^2.2.0",
