--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next-with-apollo": "^3.3.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
+    "rc-swipeout": "^2.0.11",
     "react": "^16.8.3",
     "react-adopt": "^0.6.0",
     "react-apollo": "^2.5.1",
