--- a/backend/variables.env
+++ b/backend/variables.env
@@ -1,7 +1,7 @@
 FRONTEND_URL="http://localhost:7777"
-PRISMA_ENDPOINT="https://us1.prisma.sh/julian-alvarez/nexus-auth/dev"
-PRISMA_SECRET="jeqwrqweuri324"
-APP_SECRET="MVbkc39cDt5YVSQthU6L3DJ5PHhNagzjfcjsQzArtccbjCDxJX"
+PRISMA_ENDPOINT="https://prisma.hotssy.com/inspector/production?headers={"Authorization":"Bearer MVbkc39cDt5YVSQthU6L3DJ5PHhNagzjfcjsQzArtccbjCDxJX"}"
+PRISMA_SECRET="MVbkc39cDt5YVSQthU6L3DJ5PHhNagzjfcjsQzArtccbjCDxJX"
+APP_SECRET="sx7*2019"
 STRIPE_SECRET="sk_test_TlG2HH3dscjbUbrhvz2tCqlm"
 PORT=4444
 MAIL_HOST="smtp.mailtrap.io"
