--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "graphql-auth",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts"
+    "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
+    "deploy": "prisma deploy --env-file variables.env"
   },
   "prettier": {
     "semi": false,
