--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev-public": "next -p 7777 -H 192.168.1.13",
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start",
+    "now-build": "next build",
     "type-check": "tsc"
   },
   "prettier": {
