--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "graphql-auth",
+  "name": "inspector-api",
   "license": "MIT",
   "scripts": {
-    "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
-    "deploy": "prisma deploy --env-file variables.env"
+    "dev": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
+    "deploy": "prisma deploy --env-file .env",
+    "build": "tsc",
+    "dev-dist": "NODE_ENV=development nodemon dist/src/index.js"
   },
   "prettier": {
     "semi": false,
