--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
+    "rc-collapse": "^1.11.1",
     "rc-swipeout": "^2.0.11",
     "react": "^16.8.4",
     "react-adopt": "^0.6.0",
