actualizado prisma a la version beta con admin, empezadas mejoras para vista de servicios

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "prisma-deploy": "prisma deploy --env-file .env",
-    "prisma-generate": "prisma generate --env-file .env"
+    "prisma-generate": "prisma generate --env-file .env",
+    "prisma-instrospect": "prisma introspect --env-file .env"
   },
   "prettier": {
     "semi": false,
