--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-toastify": "^4.5.2",
     "react-tooltip": "^3.10.0",
     "react-transition-group": "^2.6.1",
+    "react-use-form-state": "^0.8.0",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
