--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "dev-sapco": "next -p 7777 -H 192.168.1.43",
     "dev-public": "next -p 7777 -H 192.168.1.13",
     "dev": "next -p 7777",
+    "dev-start": "next start -p 7777",
     "now-build": "next build",
     "type-check": "tsc"
   },
