--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-typescript",
+  "name": "inspector",
   "version": "1.0.0",
   "scripts": {
     "dev-sapco": "next -p 7777 -H 192.168.1.43",
@@ -17,25 +17,22 @@
     "@types/styled-components": "^4.1.12",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
-    "apollo-boost": "^0.3.1",
-    "apollo-client": "^2.5.1",
     "cookie": "^0.3.1",
     "date-fns": "^2.0.0-alpha.27",
     "graphql": "^14.1.1",
-    "graphql-tag": "^2.10.1",
+    "graphql-hooks": "^3.4.0",
+    "graphql-hooks-memcache": "^1.2.0",
+    "graphql-hooks-ssr": "^1.1.0",
+    "isomorphic-unfetch": "^3.0.0",
     "js-cookie": "^2.2.0",
     "next": "^8.0.3",
     "next-images": "^1.1.1",
-    "next-with-apollo": "^3.4.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "rc-collapse": "^1.11.1",
     "rc-swipeout": "^2.0.11",
     "react": "^16.8.4",
-    "react-adopt": "^0.6.0",
-    "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
-    "react-modal": "^3.8.1",
     "react-toastify": "^4.5.2",
     "react-tooltip": "^3.10.0",
     "react-transition-group": "^2.6.1",
