--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@types/cookie": "^0.3.2",
     "@types/styled-components": "^4.1.12",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-typescript": "^1.1.1",
